// Copyright 2024 LINE Corporation
//
// LINE Corporation licenses this file to you under the Apache License,
// version 2.0 (the "License"); you may not use this file except in compliance
// with the License. You may obtain a copy of the License at:
//
//   https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
// WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
// License for the specific language governing permissions and limitations
// under the License.
syntax = "proto3";

package centraldogma.xds.group.v1;

option java_multiple_files = true;
option java_outer_classname = "XdsGroupProto";
option java_package = "com.linecorp.centraldogma.xds.group.v1";

import "google/api/annotations.proto";
import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";

// An XdsGroupService provides methods to manage groups.
service XdsGroupService {

  // Creates a new group.
  rpc CreateGroup(CreateGroupRequest) returns (Group) {
    option (google.api.http) = {
      post: "/api/v1/xds/groups"
      body: "group"
    };
  }

  // Deletes an group.
  rpc DeleteGroup(DeleteGroupRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/api/v1/xds/{name=groups/*}"
    };
  }
}

message CreateGroupRequest {
  Group group = 1 [(google.api.field_behavior) = REQUIRED];
}

message DeleteGroupRequest {
  // Format: groups/{group}
  string name = 1 [(google.api.field_behavior) = REQUIRED];

  // If set to true, any xds Resources from this group will also be deleted.
  // (Otherwise, the request will only work if the group has no xDS resources.)
  // bool force = 2;
}

message Group {
  // Format: groups/{group}
  string name = 1 [(google.api.field_behavior) = IDENTIFIER];
}
